// Created by Anton Piruev in 2026. 
// Any direct commercial use of derivative work is strictly prohibited.

namespace DevConsole.Backend.Infrastructure.Services.Input
{
  public static class TouchButtonNames
  {
    public const string ToggleConsoleButton = "ToggleConsole";
    public const string ConsoleSubmitButton = "ConsoleSubmit";
  }
}
